--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Model FLOP/Memory Analysis System"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "transformers==4.46.3",
+    "transformers>=4.51.0",
     "torch>=2.7.1",
     "python-dotenv>=1.1.1",
     "deepspeed>=0.17.2",
@@ -21,4 +21,5 @@ dependencies = [
     "pyyaml>=6.0.2",
     "jsonschema>=4.25.1",
     "claude-agent-sdk>=0.1.4",
+    "accelerate>=1.12.0",
 ]
