--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,5 @@ dependencies = [
     "jsonschema>=4.25.1",
     "claude-agent-sdk>=0.1.4",
     "accelerate>=1.12.0",
+    "check-jsonschema>=0.35.0",
 ]
