--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "claude-agent-sdk>=0.1.4",
     "accelerate>=1.12.0",
     "check-jsonschema>=0.35.0",
+    "scipy>=1.16.3",
+    "matplotlib>=3.10.8",
 ]
 
 [dependency-groups]
